fix footer, so it is visible when content section is small

--- a/frontend-test-app/src/app/app.component.scss
+++ b/frontend-test-app/src/app/app.component.scss
@@ -1,7 +1,13 @@
+.main {
+	display: flex;
+  flex-direction: column;
+    min-height: 100vh;
+}
+
 .content {
 	background-color: #2a2d36;
-	min-height: 100vh;
 	padding-top: 3rem;
+	flex: 1;
 
 	h1 {
 		font-weight: 400;
